# minimal-boost-filesystem-test

./: CMakeLists.txt  README.md  boost_test.cpp
